# template

./: CMakeLists.txt
python/: CMakeLists.txt  template.i
script/: setup_template_env.sh.in
test/: CMakeLists.txt  test_all.cc
